--- a/index.css
+++ b/index.css
@@ -2,3 +2,32 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 
 }
+#navbar{
+    display:flex;
+    background-color: white;
+    height:57px;
+    margin-left:-10px;
+    margin-top:-10px;
+    overflow: hidden;
+    margin-right: -8px;
+    box-shadow: 0px 2px 5px rgb(155, 152, 152);
+}
+
+.menubtn {
+    background-color:white;
+    margin:0px;
+    align-items: center;
+    border-radius: 10px;
+    border-style: none; 
+    margin-top:18px;
+    margin-left:10px;
+}
+.menubtn:hover{
+    background-color:rgb(221, 217, 217);
+}
+#logo img{
+    width:219px;
+    height:70px;
+    margin-left:5px;
+    margin-top:-5px;
+}
