--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body{
     margin-left:-10px;
     margin-top:-10px;
     overflow: hidden;
+    width:104%;
     margin-right: -8px;
     box-shadow: 0px 2px 5px rgb(155, 152, 152);
 }
