--- a/index.css
+++ b/index.css
@@ -9,7 +9,6 @@ body{
     margin-left:-10px;
     margin-top:-10px;
     overflow: hidden;
-    width:104%;
     margin-right: -8px;
     box-shadow: 0px 2px 5px rgb(155, 152, 152);
 }
@@ -54,11 +53,23 @@ body{
     ;
     justify-items: center;
 }
-#i{
+#i1:hover{
+    color: rgb(235, 43, 43);
+}
+#i2:hover{
+    color: rgb(112, 173, 20);
+}
+#i3:hover{
+    color: royalblue;
+}
+#i4:hover{
+    color: rgb(221, 221, 11);
+}
+#i1 ,#i2,#i3, #i4{
      align-self: center;
      color:rgb(139, 134, 134);
 }
-#t{
+#t1,#t2,#t3,#t4{
     margin-top:0px;
     color:rgb(139, 134, 134);
 }
@@ -74,7 +85,8 @@ body{
 /*Make Good Things Togehter And Vr Image Starts*/
 .intro{
     display:grid;
-    margin:8px;
+    margin:10px;
+    padding: 10px;
     grid-template-columns: repeat(8,1fr);
 }
 .vr{
@@ -91,21 +103,12 @@ body{
     grid-column: 1/8;
     margin:0;
 }
-.intro #together{
-    grid-column: 1/4;
-    margin:4px;
-}
-.intro #dot{
-    grid-column: 4/5;
-    margin:4px;
-    margin-left:10px;
-}
 .intro #gdgindore{
     grid-column:1/7 ;
     font-weight:100;
     font-size:1.7em;
 }
-.intro #para{
+.intro #para, .wwd #para ,.wwdcard p{
     grid-column:1/9;
     font-weight:500;
     color:rgb(95, 91, 91);
@@ -116,20 +119,188 @@ body{
 
 }
 .intro #member{
-    grid-column: 1/4;
-    background-color: royalblue;
+    grid-column: 1/2;
+    background-color: rgb(26, 115, 232);
     border-style: none;
     border-radius: 5px;
     padding:8px 0px;
     color:white;
+    font-size:14px;
+    width:140px;
+    border-width: 1px;
+}
+.intro #member:hover ,.ourfeature button:hover{
+    background-color:rgb(65, 140, 238);
 }
 .intro #learnmore{
-    grid-column:4/6;
+    grid-column:2/3;
     padding:8px 0px;
     border-radius: 8px;
     border-color:rgb(75, 204, 243) ;
     border-style: solid;
     background-color: white;
-    color:rgb(75, 204, 243);
+    color:rgb(18, 184, 235);
     margin-left:10px;
+    width:100px;
+    border-width: 1px;
 }
+.intro #learnmore:hover{
+    background-color: rgb(228, 246, 252);
+}
+/*intro Ends */
+
+/*What We Do? Starts*/
+.wwd{
+    background-color: rgb(249,249,249);
+    margin-right: -8px;
+    display:grid;
+    grid-template-columns: 1fr;
+    margin: 10px;
+    margin-right: -8px;
+    padding: 10px;
+    padding-left:28px;
+    margin-left:-8px;
+}
+.wwdcard{
+    background-color: rgb(249,249,249);
+    margin-right: -8px;
+    grid-template-columns: 1fr 1fr;
+    margin:10px;
+    display:grid;
+    margin-top:50px;
+    grid-template-areas: 
+    "talks codelabs"
+    "campus live"
+    ;
+}
+.wwdcard i{
+    font-size:300%;
+    color:rgb(119, 119, 119) ;
+}
+.wwdcard .cardcontainer {
+    display:grid;
+    padding-right:30px;
+    margin-left: -10px;
+}
+.wwdcard h4{
+    color:rgb(51, 50, 50);
+    margin-top:3px;
+}
+.wwdcard .cardcontainer #icon{
+    grid-column: 1/2;
+    justify-self: center;
+}
+.wwdcard .cardcontainer #heading{
+    grid-column: 1/2;
+    justify-self: center;
+}
+.wwdcard .cardcontainer #content{
+    grid-column: 1/2;
+    justify-self:center;
+    text-align: center;  
+}
+.agi{
+    background-color:  rgb(76, 74, 120);
+    color:rgb(235, 226, 226);
+    margin-top:-20px;
+    margin-left:-10px;
+    margin-right:-8px;
+    padding:28px;
+    padding-right:30px;
+    font-weight: 100;
+}
+.agi h3{
+    color:white;
+}
+.agi button{
+    background-color: rgb(76, 74, 120);
+    border-radius: 6px;
+    width:auto;
+    padding:8px 15px;
+    color:white;
+    font-size:14px;
+    border-style:solid;
+    border-width: 1px;
+}
+.agi button:hover{
+    background-color: rgb(94, 92, 134);
+}
+.ourevents{
+    text-align:center;
+    font-size:106%;
+    margin-top:-20px;
+    margin-left:-10px;
+    margin-right:-8px;
+    padding:28px;
+    padding-right:30px;
+    color:rgb(95, 91, 91);
+}
+.ourevents a,.partners a{
+    text-decoration: none;
+    color:royalblue;
+}
+.ourevents a:hover,.partners a:hover{
+    color:rgb(0, 78, 163);
+}
+.ourfeature{
+    background-color: rgb(249,249,249);
+    margin-right: -8px;
+    margin-left:-10px;
+    margin-top:10px;
+    padding:28px;
+    padding-right:30px;
+}
+.ourfeature{
+    color:rgb(71, 69, 69);
+    font-weight: 100;
+}
+.ourfeature .card{
+    background-color: white;
+    margin-right:-12px;
+    margin-left:-10px;
+    text-align:center;
+    padding:10px;
+    box-shadow: 1px 1px 7px rgb(155, 152, 152);
+}
+p{
+    line-height: 25px;
+}
+.ourfeature button{
+    background-color: rgb(26, 115, 232);
+    border-style: none;
+    border-radius: 5px;
+    padding:8px 0px;
+    color:white;
+    font-size:14px;
+    width:130px;
+    margin-bottom: 50px;
+}
+.partners{
+    color:rgb(95, 91, 91);
+    margin: 10px;
+    margin-right: -8px;
+    padding: 10px;
+    padding-left:28px;
+    margin-left:-8px;
+    padding-right: 20px;
+}
+.general p ,.template p{
+    color:rgb(75, 72, 72);
+    font-weight: bold;
+}
+.general button, .template button{
+    width:170px;
+    border-style: solid;
+    background-color: white;
+}
+.general button img, .template button img{
+    width:100%;
+    
+}
+.template button{
+    margin-bottom:57px;
+}
+.general {
+
+}
+
